--- a/rootdir/init.rhine.rc
+++ b/rootdir/init.rhine.rc
@@ -119,6 +119,13 @@ on post-fs-data
 
     #QCOM camera stack
     mkdir /data/misc/camera 0770 camera camera
+    mkdir /data/camera 0771 root camera
+
+    chown camera camera /sys/devices/sony_camera_0/info
+    chmod 0666 /sys/devices/sony_camera_0/info
+
+    chown camera camera /sys/devices/sony_camera_1/info
+    chmod 0666 /sys/devices/sony_camera_1/info
 
     # Sensors
     mkdir /data/system 0775 system system
