init: clear bootsplash (3.4 kernel)
Change-Id: I32fa049205f85916a35839c4d5877923d40ac504

--- a/rootdir/init.rhine.rc
+++ b/rootdir/init.rhine.rc
@@ -462,3 +462,8 @@ service timekeep /system/bin/timekeep restore
    user root
    group root
    oneshot
+
+on property:init.svc.bootanim=running
+    # Clear Sony boot splash
+    write /sys/class/graphics/fb0/blank 1
+    write /sys/class/graphics/fb0/blank 0
