--- a/rootdir/init.rhine.rc
+++ b/rootdir/init.rhine.rc
@@ -14,6 +14,7 @@
 
 import init.rhine.usb.rc
 import init.rhine.pwr.rc
+import init.rhine.dev.rc
 
 on early-init
     mount debugfs debugfs /sys/kernel/debug
